--- a/Controller/src/main/prod/merchants/atb_wallet.properties
+++ b/Controller/src/main/prod/merchants/atb_wallet.properties
@@ -1,3 +1,4 @@
 wallet.password=pass123
 backup.folder=/data/.atbcoin/atb_backup/
 node.propertySource=node_config/node_config_atb.properties
+node.zmqEnabled=false
