--- a/Controller/src/main/prod/merchants/dogecoin_wallet.properties
+++ b/Controller/src/main/prod/merchants/dogecoin_wallet.properties
@@ -1,3 +1,4 @@
 wallet.password=OHpsMP0bOaYEy5YksfcfKRizLs1OxLGQVap7
 backup.folder=/data/.dogecoin/doge_backup/
 node.propertySource=node_config/node_config_doge.properties
+node.zmqEnabled=false
