--- a/Controller/src/main/prod/merchants/litecoin_wallet.properties
+++ b/Controller/src/main/prod/merchants/litecoin_wallet.properties
@@ -1,3 +1,4 @@
 wallet.password=duXcowOXlthxkpSBISA_YdrjJSXkf_0pcmbMvsLp3pA=
 backup.folder=/data/.litecoin/ltc_backup/
 node.propertySource=node_config/node_config_ltc.properties
+node.zmqEnabled=false
