--- a/Controller/src/main/prod/merchants/edc_cli_wallet.properties
+++ b/Controller/src/main/prod/merchants/edc_cli_wallet.properties
@@ -1,6 +1,6 @@
-edc.blockchain.host_fast = http://localhost:8091
+edc.blockchain.host_fast = http://ip-172-31-45-67.us-east-2.compute.internal:8091
 #edc.blockchain.host_fast = http://ajet21.exrates.tech:64091
-edc.blockchain.host_delayed = http://localhost:8092
+edc.blockchain.host_delayed = http://ip-172-31-45-67.us-east-2.compute.internal:8092
 edc.account.registrar = exrates-currency-exchange
 edc.account.referrer = exrates-currency-exchange
 edc.account.main = output-exrates
