--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,12 @@
 				<artifactId>powermock-module-junit4</artifactId>
 				<version>1.6.4</version>
 			</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+			<version>3.1.1.RELEASE</version>
+		</dependency>
 		<!--Test-->
 
 		<!--Marshalling-->
