--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -150,6 +150,31 @@
             </build>
         </profile>
         <profile>
+            <id>devtest</id>
+            <build>
+                <finalName>ROOT</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>2.4</version>
+                        <configuration>
+                            <webResources>
+                                <resource>
+                                    <directory>src/main/devtest/</directory>
+                                    <includes>
+                                        <include>*/*.properties</include>
+                                        <include>*.properties</include>
+                                    </includes>
+                                    <targetPath>WEB-INF/classes</targetPath>
+                                </resource>
+                            </webResources>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>prod</id>
             <build>
                 <finalName>ROOT</finalName>
