--- a/Controller/src/main/devtest/db.properties
+++ b/Controller/src/main/devtest/db.properties
@@ -1,4 +1,4 @@
-db.user = devprod
+db.user = exrates
 db.password = Fh24soaf8sy3
-db.url = jdbc:mysql://localhost:3306/birzha?useUnicode=true&characterEncoding=UTF-8
+db.url = jdbc:mysql://pokemoncoindb.cedlveyttji9.us-east-2.rds.amazonaws.com:3306?useUnicode=true&characterEncoding=UTF-8
 db.classname = com.mysql.jdbc.Driver
