--- a/Controller/src/main/prod/node_config/node_config_btg.properties
+++ b/Controller/src/main/prod/node_config/node_config_btg.properties
@@ -1,6 +1,6 @@
 node.bitcoind.rpc.protocol = http
-node.bitcoind.rpc.host = 127.0.0.1
-node.bitcoind.rpc.port = 28344
+node.bitcoind.rpc.host = ip-172-31-14-168.us-east-2.compute.internal
+node.bitcoind.rpc.port = 38444
 node.bitcoind.rpc.user = wayfarer88
 node.bitcoind.rpc.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
 node.bitcoind.http.auth_scheme = Basic
