--- a/Controller/src/main/devtest/merchants/ethereum.properties
+++ b/Controller/src/main/devtest/merchants/ethereum.properties
@@ -1,6 +1,6 @@
 #Main
 ethereum.currency = Ethereum
-ethereum.url = http://163.172.77.155:8545/
+ethereum.url = https://mainnet.infura.io/qtsEMqjCpZaut6U4HG4C/
 ethereum.destinationDir = //data//ethereum//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x5B1126BCfb905d88d7e5b8Cc1DbA22658Ec621D5
