--- a/Controller/src/main/uat/merchants/neo.properties
+++ b/Controller/src/main/uat/merchants/neo.properties
@@ -1,3 +1,3 @@
-neo.node.endpoint=http://127.0.0.1:20332
+neo.node.endpoint=http://ip-172-31-30-170.us-east-2.compute.internal:20332
 neo.main.address=AMF4Yqv1PMry2BDc9ELttPsMsohaw2D3fT
 neo.min.confirmations=10
