--- a/pom.xml
+++ b/pom.xml
@@ -351,7 +351,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.6.2</version>
+			<version>LATEST</version>
 		</dependency>
 
 		<dependency>
