--- a/Controller/src/main/dev/merchants/waves.properties
+++ b/Controller/src/main/dev/merchants/waves.properties
@@ -2,3 +2,4 @@ waves.rest.host=http://127.0.0.1
 waves.rest.port=6869
 waves.rest.api.key=ridethewaves!
 waves.main.account=3N8DRLQKAc9arr6q5G9AagYUExXLhDJeGH3
+waves.min.confirmations=5
