--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -1,10 +1,10 @@
-mail_support.host=exrates.top
+mail_support.host=ec2-18-217-120-162.us-east-2.compute.amazonaws.com
 mail_support.port=25
 mail_support.protocol=smtp
 mail_support.user=mail@exrates.top
 mail_support.password=R37yt7gEft
 
-mail_info.host=exrates.top
+mail_info.host=ec2-18-217-120-162.us-east-2.compute.amazonaws.com
 mail_info.port=25
 mail_info.protocol=smtp
 mail_info.user=no-reply@exrates.top
