--- a/Controller/src/main/uat/mail.properties
+++ b/Controller/src/main/uat/mail.properties
@@ -1,10 +1,10 @@
-mail_support.host=172.31.14.161
+mail_support.host=exrates.top
 mail_support.port=25
 mail_support.protocol=smtp
 mail_support.user=mail@exrates.top
 mail_support.password=R37yt7gEft
 
-mail_info.host=172.31.14.161
+mail_info.host=exrates.top
 mail_info.port=25
 mail_info.protocol=smtp
 mail_info.user=no-reply@exrates.top
