--- a/Controller/src/main/prod/cache.properties
+++ b/Controller/src/main/prod/cache.properties
@@ -6,3 +6,6 @@ newsBrief.timeToLiveSeconds=60
 orderAccepted.timeToLiveSeconds=10
 singlePairStatistics.timeToLiveSeconds=10
 candleChart.timeToLiveSeconds=10
+
+#
+pairs_lazy_load=false
