--- a/Controller/src/main/uat/angular.properties
+++ b/Controller/src/main/uat/angular.properties
@@ -1,1 +1,1 @@
-angular.allowed.origin = ttp://exrates.s3-website.eu-central-1.amazonaws.com
+angular.allowed.origin=http://exrates.s3-website.eu-central-1.amazonaws.com
