--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -147,6 +147,11 @@
       <artifactId>json-smart</artifactId>
       <version>2.3</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpasyncclient</artifactId>
+          <version>4.1.1</version>
+      </dependency>
   </dependencies>
   <repositories>
     <repository>
