--- a/Controller/src/main/prod/merchants/lisk.properties
+++ b/Controller/src/main/prod/merchants/lisk.properties
@@ -3,3 +3,6 @@ lisk.node.port=8000
 lisk.main.address=9022310477640438519L
 lisk.main.secret=game police minimum pitch damp symptom until double hire flower spray gorilla
 lisk.min.confirmations=300
+lisk.tx.sort.prefix=
+lisk.tx.queryLimit=1000
+lisk.tx.count.nodeType=STRING
