--- a/Controller/src/main/dev/merchants/waves.properties
+++ b/Controller/src/main/dev/merchants/waves.properties
@@ -2,6 +2,8 @@ waves.rest.host=http://ec2-13-59-242-131.us-east-2.compute.amazonaws.com
 waves.rest.port=6869
 waves.rest.api.key=ridethewaves!
 waves.main.account=3N8DRLQKAc9arr6q5G9AagYUExXLhDJeGH3
+waves.fee.account=3MxE9izMhKiD3ANksRpvKfzPkjQ6F7ER1R7
 waves.min.confirmations=5
+waves.notify.email=golvazin@gmail.com
 # tokens named by merchant name!!
 waves.token.GameX.id=H3nUizuYCpPnBSfAuZpr2DXVw8Pc9WNPcWwuNxJJamFW
