--- a/Controller/src/main/prod/merchants/waves.properties
+++ b/Controller/src/main/prod/merchants/waves.properties
@@ -3,6 +3,7 @@ waves.rest.port=6869
 waves.rest.api.key=N95kjMmDx8CS4HsURmzZr3mN3bpf6zKjWQqG
 waves.main.account=3P4NkaYre8ADQxb8LNiusWGjCZ6iAPouqwN
 waves.min.confirmations=20
+waves.process.delay=30
 waves.fee.account=3PGYEbabkisSxzaZBzQHromYimsnpgQoy8k
 waves.notify.email=dima.kolesnik@gmail.com
 # tokens named by merchant name!!
