--- a/Controller/src/main/uat/merchants/waves.properties
+++ b/Controller/src/main/uat/merchants/waves.properties
@@ -3,6 +3,7 @@ waves.rest.port=6869
 waves.rest.api.key=ridethewaves!
 waves.main.account=3N8DRLQKAc9arr6q5G9AagYUExXLhDJeGH3
 waves.min.confirmations=5
+waves.process.delay=5
 waves.fee.account=3MxE9izMhKiD3ANksRpvKfzPkjQ6F7ER1R7
 waves.notify.email=mdovgodko@gmail.com
 # tokens named by merchant name!!
