--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -110,7 +110,12 @@
     <dependency>
       <groupId>org.web3j</groupId>
       <artifactId>core</artifactId>
-      <version>2.3.1</version>
+      <version>3.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.web3j</groupId>
+      <artifactId>codegen</artifactId>
+      <version>3.3.1</version>
     </dependency>
     <dependency>
       <groupId>io.reactivex</groupId>
